Add estemated confidence to face detection result
