# src/main/openapi/openapi.yaml
@@ -158,6 +158,7 @@ components:
     Box:
       type: object
       required:
+        - faceID
         - x
         - y
         - width
@@ -169,7 +170,10 @@ components:
         faceID:
           type: integer
           description: 'The ID for the detected face. IDs start at 0 and are incremented by 1 for each found face'
-        # TODO: The probability that it is really a face
+        confidence:
+          type: number
+          format: float
+          description: 'The confidence for correct face detection. Higher numbers are better'
         x:
           type: integer
           description: 'The x coordinate for the bounding box for the face'
